# switchbot

./: .env.sample  docker-compose.yaml  pyproject.toml
backend/: .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/db/: db.dbml
backend/migrations/: env.py
backend/migrations/versions/: debd1177d37b_create_initial_tables.py
backend/scripts/: db.sh
backend/src/: __init__.py
backend/src/app/: main.py
backend/src/database/: database.py  models.py
backend/src/scripts/: seed.py
frontend/: Dockerfile  package-lock.json
nginx/: default.conf
scripts/examples/: get_all_device.py  get_temperature_humidity.py
