


[project]
name = "switchbot-backend"
version = "0.1.0"
description = "Backend for SwitchBot integration"
authors = [
    { name = "koki morita", email = "morita82007koki@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "apscheduler>=3.11.1",
    "fastapi>=0.122.0",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]

